grammar.txt
script -> block

block -> stmt block
       | 

stmt -> simstmt ;
      | flowctrl
      | printstmt ;
      | NEWLINE
    
simstmt -> INT ID
         | INT ID = numstmt
         | FLOAT ID
         | FLOAT ID = numstmt
         | STRING ID
         | STRING ID = wordstmt
         | BOOLEAN ID
         | BOOLEAN ID = boolexpr
         | ID = expr                      -Implementation missing

numstmt -> numexpr 
         | ( numexpr )

numexpr -> number
         | numexpr arit numexpr
         | numstmt arit numexpr
         | numexpr arit numstmt

number -> INUMBER
        | FNUMBER
        | ID

arit -> +
      | -
      | *
      | /
      | ^

wordstmt -> wordexpr
          | numstmt
          | numstmt + wordstmt

wordexpr -> WORD
          | ID
          | wordexpr + wordexpr
          | wordstmt + wordstmt
          | wordexpr + wordstmt
          | wordstmt + wordexpr

boolexpr -> TRUE
          | FALSE
          | ID
          | compar

compar -> ( comparexpr )
        | ( boolexpr )

comparexpr -> numstmt compbasic boolexpr
            | boolexpr compbasic numstmt
            | wordexpr compmin wordexpr
            | numstmt compall numstmt
            | comparexpr compall comparexpr
            | boolexpr compbasic boolexpr
            | wordexpr compmin boolexpr
            | boolexpr compmin wordexpr

compall -> GTEQUALS
         | LSEQUALS
         | '>'
         | '<'
         | compbasic

compbasic -> AND
           | OR
           | compmin

compmin -> EQUALS
         | NOTEQUALS
          
flowctrl -> if compar { block }           -Implementation missing       
          | while compar { block }        -Implementation missing
          | for ( ; ; ){ block }          -Implementation missing

printstmt -> ( expr )                     -Implementation missing
